[package]
name = "template"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = ""
repository = "https://github.com/yaahc/{{crate_name}}"
documentation = "https://docs.rs/{{crate_name}}"
readme = "README.md"
categories = []
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
